// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#collect() 1`] = `
Array [
  1,
  2,
  3,
  4,
  5,
]
`;

exports[`#enumerate() 1`] = `
Array [
  Array [
    0,
    "test",
  ],
  Array [
    1,
    "test",
  ],
  Array [
    2,
    "test",
  ],
  Array [
    3,
    "test",
  ],
  Array [
    4,
    "test",
  ],
]
`;

exports[`#filter() 1`] = `
Array [
  2,
  4,
  6,
  8,
  10,
]
`;

exports[`#join() 1`] = `"test test test test test"`;

exports[`#join() 2`] = `"test,test,test,test,test"`;

exports[`#map() 1`] = `
Array [
  1,
  4,
  9,
  16,
  25,
  36,
  49,
  64,
  81,
  100,
]
`;

exports[`#next() 1`] = `
Object {
  "done": false,
  "value": "test",
}
`;

exports[`#next() 2`] = `
Object {
  "done": false,
  "value": "test",
}
`;

exports[`#next() 3`] = `
Object {
  "done": false,
  "value": "test",
}
`;

exports[`#zip() 1`] = `
Array [
  Array [
    0,
    5,
  ],
  Array [
    1,
    6,
  ],
  Array [
    2,
    7,
  ],
  Array [
    3,
    8,
  ],
  Array [
    4,
    9,
  ],
  Array [
    5,
    10,
  ],
]
`;

exports[`.range() 1`] = `
Array [
  1,
]
`;

exports[`.range() 2`] = `
Array [
  1,
  2,
  3,
  4,
  5,
]
`;

exports[`.range() 3`] = `
Array [
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
]
`;

exports[`.repeat() 1`] = `
Array [
  undefined,
  undefined,
  undefined,
  undefined,
  undefined,
]
`;

exports[`.repeat() 2`] = `
Array [
  "test",
  "test",
  "test",
  "test",
  "test",
]
`;
